--- a/ElfTraining/pom.xml
+++ b/ElfTraining/pom.xml
@@ -38,6 +38,13 @@
     <artifactId>selenium-java</artifactId>
     <version>3.7.1</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
+<dependency>
+    <groupId>net.sourceforge.jexcelapi</groupId>
+    <artifactId>jxl</artifactId>
+    <version>2.6.12</version>
+</dependency>
+
 
 
   </dependencies>
